--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <body>
         <div class="header">
             <h1>Assignment</h1>
+            <body text="red">
+        <h1>this is simple page</h1>
+        <h2>Welcome to may page</h2>
+        <img align="middle" border="1" height="100" hspace="30" src=""C:\Users\hp\Downloads\1688370743943.jpg"" width="200" alt="">
         </div>
         <ul type="none">
            <a href="html/helloworld.html"> <li>Hello world!!</li></a>
