--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     </head>
     <body>
         <div class="header">
-            <h1>Assignment</h1>
+            <h1>Bicky KUshwaha
+                Assignment</h1>
             <body text="red">
         <h1>this is simple page</h1>
         <h2>Welcome to may page</h2>
