--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
     </head>
     <body>
         <div class="header">
-            <h1>Bicky KUshwaha
-                Assignment</h1>
+            <h1>Assignment</h1>
             <body text="red">
-        <h1>this is simple page</h1>
-        <h2>Welcome to may page</h2>
+        <h2>Bicky Kushwaha</h2>
+        
         <img align="middle" border="1" height="100" hspace="30" src=""C:\Users\hp\Downloads\1688370743943.jpg"" width="200" alt="">
         </div>
         <ul type="none">
