--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             <h1>Assignment</h1>
             <body text="red">
         <h2>Bicky Kushwaha</h2>
-        
-        <img align="middle" border="1" height="100" hspace="30" src=""C:\Users\hp\Downloads\1688370743943.jpg"" width="200" alt="">
+        <img align="middle" border="10" height="100" hspace="30" src="C:\Users\hp\Downloads\1688370743943.jpg" width="200" alt="">
         </div>
         <ul type="none">
            <a href="html/helloworld.html"> <li>Hello world!!</li></a>
