--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                 color: white;
                 text-align: center;
             }
+             .header h2{
+                font-size: 40px;
+                font-family: 'Times New Roman', Times, serif;
+                color: orange;
+                text-align: center;
+            }
             a{
                 text-decoration: none;
             }
@@ -54,9 +60,12 @@
     <body>
         <div class="header">
             <h1>Assignment</h1>
-            <body text="red">
-        <h2>Bicky Kushwaha</h2>
+            <body text="orange">
+      
         <img align="middle" border="2" height="300" hspace="60" src="C:\Users\hp\Downloads\1688370743943.jpg" width="200" alt="">
+                  <h2>Bicky Kushwaha</h2>
+                    <body text="orange">
+                                        
         </div>
         <ul type="none">
            <a href="html/helloworld.html"> <li>Hello world!!</li></a>
