--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 font-size: 40px;
                 font-family: 'Times New Roman', Times, serif;
                 color: orange;
-                text-align: center;
+                text-align: left;
             }
             a{
                 text-decoration: none;
