--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h1>Assignment</h1>
             <body text="orange">
       
-        <img align="middle" border="2" height="300" hspace="60" src="C:\Users\hp\Downloads\1688370743943.jpg" width="200" alt="">
+        <img align="left" border="2" height="300" hspace="60" src="C:\Users\hp\Downloads\1688370743943.jpg" width="200" alt="">
                   <h2>Bicky Kushwaha</h2>
                     <body text="orange">
                                         
