--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            height: 100vh;
           }
          body {
-             background-color: black;
+             background-color: dark blue;
              width: auto;
              height: auto;
              margin: auto;
@@ -33,7 +33,7 @@
                 font-size: 40px;
                 font-family: 'Times New Roman', Times, serif;
                 color: white;
-                text-align: center;
+                text-align: right;
             }
              .header h2{
                 font-size: 40px;
@@ -52,7 +52,7 @@
                 width: 1500px;
                 height: 30px;
                 margin: 10px;
-                text-align: center;
+                text-align: right;
             }
 
         </style>
